@@ -1,3 +1,7 @@
+1999-02-12  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
+
+	* lisp/gnus.el (gnus-revision-number): Increment to 01.
+
 1999-02-11  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
 
 	* lisp/gnus.el (gnus-version-number): Update to 6.10.058.
@@ -7,6 +11,10 @@
 	design.
 	* lisp/gnus-msg.el (gnus-summary-mail-forward): Ditto.
 
+ 	* lisp/gnus-sum.el (gnus-nov-parse-line): Use
+ 	`nnheader-nov-read-message-id' instead of `nnheader-nov-field' or
+ 	`nnheader-generate-fake-message-id'.
+ 
 	* lisp/mail-source.el (mail-source-fetch-pop): Ignore program and
 	authentication scheme..
 
